--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 html, body { 
-  width: 100%;
   height: 100%; 
   margin: 0;
-  background: #270F34; 
-  overflow: hidden; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center
+
 }
 
   .bg_heart{
@@ -16,7 +11,7 @@ html, body {
     width:100%;
     height:100%;
    overflow:hidden;
-    background-image:url("https://i.pinimg.com/originals/51/d8/37/51d8374126446d495348b6032202126f.jpg");
+    background-image:url("https://cdn.pixabay.com/photo/2018/08/03/04/36/couple-3581038_1280.jpg");
     background-size:100% 100%;
     z-index:-1;
   }
